# cramp

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
music/: README.md
src/: app.rs  controls.rs  input.rs  main.rs  mpris.rs  player.rs  process.rs  queue.rs  song.rs  ui.rs
