[package]
name = "cramp"
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
dirs = "5.0.1"
eframe = "0.21"
egui_file = "0.8"
rand = "0.8"
rayon = "1.7"

# https://github.com/RustAudio/rodio/pulls/487 fixes a bug, not yet published
# rodio = "0.17"
rodio = { git = "https://github.com/RustAudio/rodio.git", rev="5e034a2" }

[target.'cfg(unix)'.dependencies]
dbus = { version = "0.9"}
dbus-crossroads = "0.5"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.48", features = ["Foundation", "Media", "Media_Playback"]}
