[package]
name = "cramp"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cod = { version = "9.0.0", features = ["crossterm"] }
dirs = "5.0.1"
kittyaudio = "0.1.9"
slotmap = "1.0.7"

# don't ask, it's what I needed to make it play audio in debug
[profile.dev]
opt-level = 1

[profile.dev.package.kittyaudio]
opt-level = 3
