[package]
name = "cramp"
version = "2.0.2"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes"] }
circular-buffer = "0.1.7"
cod = { version = "9.0.0", features = ["crossterm"] }
crossbeam-channel = "0.5.13"
dirs = "5.0.1"
kittyaudio = "0.1.9"
mpris-server = "0.8.0"
rand = "0.8.5"
urlencoding = "2.1.3"

# don't ask, it's what I needed to make it play audio in debug
[profile.dev]
opt-level = 1

[profile.dev.package.kittyaudio]
opt-level = 3
